# privacy-guard

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  Makefile  README.md  pyproject.toml  requirements.txt
hide/: crypt.py
src/passman/: main.py  main.ui
src/privacy_guard/: cli.py  files.py
src/ptk/: cli.py
src/ptk/core/: files.py  passgen.py
tests/: test_crypt.py
tests/cryptography/: test_fernet.py  test_pastebin.py
tests/privacy_guard/: test_crypt.py
tests/ptk/: test_crypt.py
tests/ptk/core/: test_crypt.py  test_passwd.py
