[build-system]
#requires = ["setuptools>=61.0.0"]
#build-backend = "setuptools.build_meta"
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "privacy-guard"
dynamic = ["version"]
requires-python = ">= 3.7"
dependencies = [
    "cryptography"
]
authors = [
  {name = "Xu Xiang", email = "sokrato@qq.com"},
]
description = "A Privacy Enhancing Toolkit."
readme = "README.md"
keywords = ["encryption", "cryptography", "privacy"]
license = {text = "MIT License"}
classifiers = [
    # 2 - Pre-Alpha, 3 - Alpha, 4 - Beta, 5 - Production/Stable
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project.optional-dependencies]
gui = ["PySide6"]
cli = ["click", "rich"]

[project.scripts]
pg = "privacy_guard.cli:main"
[project.gui-scripts]
pg-gui = "privacy_guard.gui:main"

[project.urls]
Homepage = "https://github.com/sokrato/privacy-guard"
Documentation = "https://github.com/sokrato/privacy-guard"
#"Release notes" = "https://docs.djangoproject.com/en/stable/releases/"
#Funding = "https://www.djangoproject.com/fundraising/"
Source = "https://github.com/sokrato/privacy-guard"
#Tracker = "https://code.djangoproject.com/"

[tool.black]
target-version = ["py310"]

[tool.setuptools.dynamic]
version = {attr = "privacy_guard.__version__"}

[tool.setuptools.packages.find]
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
where = ["src"]
include = ["privacy_guard"]

# https://hatch.pypa.io/latest/build/
[tool.hatch.build.targets.sdist]
include = ["src/privacy_guard"]
exclude = [".gitignore"]

[tool.hatch.build.targets.wheel]
packages = ["src/privacy_guard"]

[tool.hatch.version]
path = "src/privacy_guard/__init__.py"
