[project]
name = "privacy_toolkit"
dynamic = ["version"]
description = "A Privacy Enhancing Toolkit. It helps you to [de,en]crypt files"
requires-python = ">= 3.7"
authors = [
  {name = "Xu Xiang", email = "sokrato@qq.com"},
]
dependencies = [
    "cryptography",
    "numpy",
]
readme = "README.md"
keywords = ["encryption", "cryptography", "privacy"]
license = {text = "MIT License"}
classifiers = [
    # 2 - Pre-Alpha, 3 - Alpha, 4 - Beta, 5 - Production/Stable
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[project.optional-dependencies]
# gui = ["PySide6"]
cli = ["click", "rich"]

[project.scripts]
ptk = "ptk.cli:main"
# [project.gui-scripts]
# ptk-gui = "ptk.gui:main"

[project.urls]
Homepage = "https://github.com/sokrato/privacy-guard"
Documentation = "https://github.com/sokrato/privacy-guard"
#"Release notes" = "https://docs.djangoproject.com/en/stable/releases/"
#Funding = "https://www.djangoproject.com/fundraising/"
Source = "https://github.com/sokrato/privacy-guard"
#Tracker = "https://code.djangoproject.com/"

[tool.ruff]
fix = true
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "RUF",
]
ignore = ["E501", "RUF001", "RUF002", "RUF003"] # ignore line-too-long errors
isort.known-first-party = ["ptk"]

[tool.black]
target-version = ["py310"]

[tool.coverage.run]
source = ["src"]
branch = true

# for setuptools
# [tool.setuptools.packages.find]
# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
# where = ["src"]
# include = ["ptk"]

# https://hatch.pypa.io/latest/build/
[tool.hatch.build.targets.sdist]
include = ["src/ptk"]
exclude = [".gitignore"]

[tool.hatch.build.targets.wheel]
packages = ["src/ptk"]

[tool.hatch.version]
path = "src/ptk/__init__.py"

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true

[dependency-groups]
dev = [
    "pre-commit>=2.21.0",
    "ruff>=0.11.12",
    "black>=23.3.0",
]
test = [
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "python-dotenv>=0.21.1",
    "requests>=2.31.0",
]
